compilateurDeca/src/test/deca/context/invalid/sans_objet/affectations/bool_assign_int.deca
// Description:
//    Sans-Objet
//    Affectation
//    Affectation incompatible (int vers boolean) :
//
// Resultats:
//    Ligne 14: 
//    impossible d'affecter int à boolean
// 
// Historique:
//    cree le 11/01/2026

{
    boolean b = 1;
}